# Travelling-Salesman-Problem

./: 15.txt  BranchAndBound.csv  BruteForce.csv  CMakeLists.txt  DynamicProgramming.csv  br.txt  file.txt  main.cpp
IO/: CSVWriter.cpp  CSVWriter.h  CSVWriterACO.cpp  CSVWriterACO.h  CSVWriterLocal.cpp  CSVWriterLocal.h  FileReader.cpp  FileReader.h
algorithms/: AntColonyOptimization.cpp  AntColonyOptimization.h  BnB.cpp  BnB.h  BranchAndBound.cpp  BranchAndBound.h  BruteForce.cpp  BruteForce.h  DynamicProgramming.cpp  DynamicProgramming.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h  TabuSearch.cpp  TabuSearch.h
data/: 10.txt  15.txt  br.txt  file.txt  plik170.txt  plik358.txt  plik55.txt  tsp_10a.txt  tsp_10b.txt  tsp_10c.txt  tsp_14_db.txt
measurements/: Measurements.cpp  Measurements.h  MeasurementsACO.cpp  MeasurementsACO.h  MeasurementsLocal.cpp  MeasurementsLocal.h
structures/: Matrix.cpp  Matrix.h
